--- a/0x05-Node_JS_basic/package.json
+++ b/0x05-Node_JS_basic/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
     "check-lint": "lint [0-9]*.js",
@@ -13,11 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "chai-http": "^4.3.0",
-    "express": "^4.17.1"
+    "express": "^4.19.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.8",
     "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
+    "@babel/node": "^7.25.0",
+    "@babel/preset-env": "^7.25.4",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
@@ -27,7 +30,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
     "mocha": "^6.2.3",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.22",
     "request": "^2.88.0",
     "sinon": "^7.5.0"
   }
